Fixes issue #2258; maybe.  I'm actually not convinced that it was broken, but there were some bugs & suboptimal code.  Test also updated to take advantage of volatile fields.
Review by: bobv (desk)


git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@2467 8db76d5a-ed1c-0410-87a9-c151d255dfc7