@@ -22,18 +22,53 @@ import com.google.gwt.junit.client.GWTTestCase;
  */
 public class BooleanTest extends GWTTestCase {
 
+  static volatile boolean bfalse = false;
+  static volatile boolean btrue = true;
+
+  static volatile String false1 = "t";
+  static volatile String false2 = "1";
+  static volatile String false3 = "false";
+  static volatile String false4 = null;
+  static volatile String true1 = "true";
+  static volatile String true2 = "TRUE";
+  static volatile String true3 = "TrUe";
+
   public String getModuleName() {
     return "com.google.gwt.emultest.EmulSuite";
   }
 
-  public void testStatics() {
-    // test the "new" 1.5 statics, for now assuming "old" rest works
-    assertEquals(true, Boolean.valueOf(true).booleanValue());
-    assertEquals(false, Boolean.valueOf(false).booleanValue());
-    assertEquals(true, Boolean.valueOf("true").booleanValue());
-    assertEquals(true, Boolean.valueOf("tRuE").booleanValue());
-    assertEquals(false, Boolean.valueOf(null).booleanValue());
-    assertEquals(false, Boolean.valueOf("yes").booleanValue());
-    assertEquals(false, Boolean.valueOf("").booleanValue());
+  public void testCtor() {
+    assertTrue(new Boolean(btrue));
+    assertTrue(new Boolean(true1));
+    assertTrue(new Boolean(true2));
+    assertTrue(new Boolean(true3));
+    assertFalse(new Boolean(bfalse));
+    assertFalse(new Boolean(false1));
+    assertFalse(new Boolean(false2));
+    assertFalse(new Boolean(false3));
+    assertFalse(new Boolean(false4));
   }
+
+  public void testParseBoolean() {
+    assertTrue(Boolean.parseBoolean(true1));
+    assertTrue(Boolean.parseBoolean(true2));
+    assertTrue(Boolean.parseBoolean(true3));
+    assertFalse(Boolean.parseBoolean(false1));
+    assertFalse(Boolean.parseBoolean(false2));
+    assertFalse(Boolean.parseBoolean(false3));
+    assertFalse(Boolean.parseBoolean(false4));
+  }
+
+  public void testValueOf() {
+    assertTrue(Boolean.valueOf(btrue));
+    assertTrue(Boolean.valueOf(true1));
+    assertTrue(Boolean.valueOf(true2));
+    assertTrue(Boolean.valueOf(true3));
+    assertFalse(Boolean.valueOf(bfalse));
+    assertFalse(Boolean.valueOf(false1));
+    assertFalse(Boolean.valueOf(false2));
+    assertFalse(Boolean.valueOf(false3));
+    assertFalse(Boolean.valueOf(false4));
+  }
+
 }
